# trad-crafts-platform

./: .env.compose  .gitignore  How-to-Fix-It.md  README.md  docker-compose.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Docker/api-server/: Dockerfile
Docker/mysql/sql/: init.sql  init_example.sql
Docker/phpmyadmin/: Dockerfile  config.user.inc.php
Docker/phpmyadmin/patches/: 0001-Add-custom-scripts.patch
Docker/web-app/: Dockerfile
api-server/: .env  pyproject.toml
api-server/src/: API_server.py  API_userlogin.py  index.py
api-server/src/api_methods/: craft_get_by_cid.py  craft_register.py  user_changepwd.py  user_delete.py  user_get_by_account.py  user_get_by_uid.py  user_login.py  user_register.py
api-server/src/data/: data_access.py
api-server/src/models/: exceptions.py  http_codes.py
api-server/src/utils/: logger.py  singleton.py  utils.py
docs/: api-spec.yml
docs/DB/: traditionalcraftdb.craft_characteristic.md  traditionalcraftdb.craft_location.md  traditionalcraftdb.users.md
res/example/: .env  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
res/example/Docker/mysql/sql/: init.sql
res/example/docs/DB/: managementdb.devices.md  managementdb.users.md
res/example/res/postman/: DeviceManagement.postman_collection.json
res/example/src/: data-process.ts  devices-delete.ts  devices-get-path.ts  devices-get-query.ts  devices-post.ts  devices-put.ts  index.ts  middleware-auth.ts  user-login.ts  user-logout.ts  user-register.ts
res/example/tests/mock-data/: devices-delete-mock.test.js  devices-get-path-mock.test.js  devices-get-query-mock.test.js  devices-post-mock.test.js  devices-put-mock.test.js  middleware-auth-mock.test.js  test-init-mock.js  user-login-mock.test.js  user-logout-mock.test.js
res/example/tests/real-data/: devices-get-path.test.js  devices-get-query.test.js  devices-post.test.js  devices-put.test.js  test-init-real.js  user-login.test.js  user-logout.test.js
res/postman/: TradCraftsPlatform.postman_collection.json
